--- a/ForumASPMVC/appsettings.json
+++ b/ForumASPMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-9H83LJ6; Initial Catalog=ForumDb ;user id=sa; password= rony611006"
+  }
 }
