Updated redirection route to details page after creating thread

--- a/ForumASPMVC/appsettings.json
+++ b/ForumASPMVC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-9H83LJ6; Initial Catalog=ForumDb;user id=sa; password= rony611006"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ForumASPMVC;Integrated Security=True;Pooling=False"
   }
 }
