--- a/ForumASPMVC/appsettings.json
+++ b/ForumASPMVC/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     /*"DefaultConnection": "Data Source=DESKTOP-9H83LJ6; Initial Catalog=ForumDb;user id=sa; password= rony611006",*/
-    "DefaultConnection": "Data Source=LAPTOP-VT3LGKNN;Initial Catalog=ForumASPMVC;Integrated Security=True"
+    "DefaultConnection": "Data Source=LAPTOP-VT3LGKNN;Initial Catalog=LionForumASPMVC;Integrated Security=True"
 
   }
 }
